# CryptoMigrate

./: .force-deploy  .old_alerts_disabled  .railwayignore  .replit  ALTERNATIVE_BACKUP_STRATEGY.md  API_ISSUES_FIXES_GUIDE.md  BINGX_PRICING_CHATGPT_GUIDE.md  CHATGPT_APPROVAL_FINAL_SOLUTION.md  CHATGPT_APPROVAL_ISSUE_FIX.md  CHATGPT_ARKHAM_INSTRUCTIONS.md  CHATGPT_BINGX_INSTRUCTIONS.md  CHATGPT_BINGX_SOLUTION.md  CHATGPT_BULK_TAAPI_GUIDE.md  CHATGPT_COINALYZE_COMPLETE_GUIDE.md  CHATGPT_COINALYZE_DIRECT_INSTRUCTIONS.md  CHATGPT_COINALYZE_INSTRUCTIONS.md  CHATGPT_COINMARKETCAP_COMPLETE_GUIDE.md  CHATGPT_COINMARKETCAP_INSTRUCTIONS.md  CHATGPT_COMPLETE_ENDPOINT_DOCUMENTATION.md  CHATGPT_CRYPTONEWS_INSTRUCTIONS.md  CHATGPT_CUSTOM_ACTIONS_COMPLETE_SETUP.md  CHATGPT_DEFI_INSTRUCTIONS.md  CHATGPT_DEFI_SECURITY_INSTRUCTIONS.md  CHATGPT_DEXSCREENER_INSTRUCTIONS.md  CHATGPT_ENDPOINTS_FIX.md  CHATGPT_EVENTREGISTRY_INSTRUCTIONS.md  CHATGPT_FREE_WHALE_TRACKING_INSTRUCTIONS.md  CHATGPT_IMMEDIATE_FIX.md  CHATGPT_INDICATOR_SCANNING_GUIDE.md  CHATGPT_INDICATOR_SCANNING_SCHEMA.json  CHATGPT_JSON_SCHEMA_SUCCESS.md  CHATGPT_LUNARCRUSH_INSTRUCTIONS.md  CHATGPT_PERMISSION_ISSUE_SOLUTION.md  CHATGPT_POSITIONS_INTERPRETATION_FIX.md  CHATGPT_POSITIONS_URGENT_FIX.md  CHATGPT_PROXY_SETUP.md  CHATGPT_RAILWAY_PLATFORM_INSTRUCTIONS.md  CHATGPT_SCHEMA_BACKUP.json  CHATGPT_SCHEMA_GUIDE.md  CHATGPT_SCHEMA_INTEGRATION_GUIDE.md  (+254 more)
attached_assets/: CHATGPT_ARKHAM_INSTRUCTIONS_1754602497434.md  DexScreener Usage instructions_1754344744179.txt  LunarCrush Usage Instructions_1754344407054.txt  (+80 more)
static/: index.html
(+69 files in other folders)
