[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-trading-intelligence"
version = "1.0.0"
description = "AI-powered crypto trading intelligence platform"
requires-python = ">=3.10"
dependencies = [
    "Flask==2.3.3",
    "Flask-CORS==4.0.0",
    "ccxt>=4.0.0",
    "pandas>=2.0.0",
    "requests>=2.28.0",
    "schedule>=1.2.0",
    "pytz>=2023.3",
    "discord.py>=2.3.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.0",
    "openai>=1.0.0",
    "numpy==1.24.3",
    "trafilatura>=1.6.0"
]

[project.scripts]
start = "python main_server.py"